# evolution

./: Dockerfile  README.md  README.txt  SimpleDockerfile  codes.py  distributed.py  docker-compose.yaml  evaluations.py  main.py  master-deployment.yaml  notes.txt  policies.py  population.py  pyproject.toml  pytorch_test.py  requirements.txt  requirements2.txt  vis.py  worker-deployment.yaml
code/: codes.py  common.py  config.py  distributed.py  evaluations.py  gradient.py  main.py  policies.py  population.py
docs/: mnist.md
evolution/experiments/: gradient2.py
evolution/src/: codes.py  common.py  config.py  distributed.py  evaluations.py  main.py  policies.py  population.py
kernels/binary/: CMakeLists.txt  Makefile  binary.cu  binary.cuh  kernel.cu  main.cu  runcmake.sh
kubernetes/: master-deployment.yaml  rabbitmq-deployment.yaml  rabbitmq-service.yaml  tensorboard-service.yaml  worker-deployment.yaml
other/: binarized.py  evo.py  min.py  my_perfect_dataloader.py  optimized_binary.py  setup.py  test.py
